--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install:app": "concurrently \"cd C:/laragon/www/Ecommerce-Fullstack/LaShopee-Backend && composer install\"",
-    "start": "concurrently \"cd C:/laragon/www/Ecommerce-Fullstack/LaShopee-Backend && php artisan serve\""
+    "start": "npm run m4rkbello",
+    "m4rkbello": "concurrently \"npm run serve:backend\" \"npm run serve:frontend\"",
+    "serve:backend": "cd C:/laragon/www/Ecommerce-Fullstack/LaShopee-Backend && php artisan serve",
+    "serve:frontend": "cd C:/laragon/www/Ecommerce-Fullstack/lashopee-frontend && npm run start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.2"
+  },
+  "devDependencies": {
+    "laravel-mix": "^6.0.49"
   }
 }
